force-app/main/default/objects/Contact/fields/Auth0_User_Id__c.field-meta.xml
<CustomField>
        <fullName>Auth0_User_Id__c</fullName>
        <label>Auth0 User Id</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>