force-app/main/default/objects/Contact/fields/Date_Bill_Sent__c.field-meta.xml
<CustomField>
        <fullName>Date_Bill_Sent__c</fullName>
        <label>Date Bill Sent</label>
        <type>Date</type>
    </CustomField>