force-app/main/default/objects/Contact/fields/Debit_Balance__c.field-meta.xml
<CustomField>
        <fullName>Debit_Balance__c</fullName>
        <label>Debit Balance</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>