force-app/main/default/objects/Contact/fields/Deceased__c.field-meta.xml
<CustomField>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </CustomField>