force-app/main/default/objects/Contact/fields/Delivery_Codes__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Codes__c</fullName>
        <label>Delivery Codes</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>