force-app/main/default/objects/Contact/fields/DNC_Is_Federal__c.field-meta.xml
<CustomField>
        <fullName>DNC_Is_Federal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DNC Federal</label>
        <type>Checkbox</type>
    </CustomField>