force-app/main/default/objects/Contact/fields/DNC_Is_Landline_to_Wireless__c.field-meta.xml
<CustomField>
        <fullName>DNC_Is_Landline_to_Wireless__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DNC Land2Wireless</label>
        <type>Checkbox</type>
    </CustomField>