force-app/main/default/objects/Contact/fields/DNC_Is_State__c.field-meta.xml
<CustomField>
        <fullName>DNC_Is_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DNC State</label>
        <type>Checkbox</type>
    </CustomField>