force-app/main/default/objects/Contact/fields/DNC_Is_Wireless_Block__c.field-meta.xml
<CustomField>
        <fullName>DNC_Is_Wireless_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DNC Wireless Block</label>
        <type>Checkbox</type>
    </CustomField>