force-app/main/default/objects/Contact/fields/DNC_Is_Wireless_to_Landline__c.field-meta.xml
<CustomField>
        <fullName>DNC_Is_Wireless_to_Landline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DNC Wireless2Land</label>
        <type>Checkbox</type>
    </CustomField>