force-app/main/default/objects/Contact/fields/DPVCode__c.field-meta.xml
<CustomField>
        <fullName>DPVCode__c</fullName>
        <label>DPVCode</label>
        <length>5</length>
        <type>Text</type>
    </CustomField>