force-app/main/default/objects/Contact/fields/DSI_Error__c.field-meta.xml
<CustomField>
        <fullName>DSI_Error__c</fullName>
        <label>DSI Error</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>