force-app/main/default/objects/Contact/fields/DSI_Person_Id__c.field-meta.xml
<CustomField>
        <fullName>DSI_Person_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique identifier from DSI</description>
        <externalId>true</externalId>
        <label>DSI Person Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>