force-app/main/default/objects/Contact/fields/Email_Bounce_Date__c.field-meta.xml
<CustomField>
        <fullName>Email_Bounce_Date__c</fullName>
        <description>Marketing Cloud email bounce</description>
        <label>Email Bounce Date</label>
        <type>Date</type>
    </CustomField>