force-app/main/default/objects/Contact/fields/Email_Bounced__c.field-meta.xml
<CustomField>
        <fullName>Email_Bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Bounced</label>
        <type>Checkbox</type>
    </CustomField>