force-app/main/default/objects/Contact/fields/Email_Corrected__c.field-meta.xml
<CustomField>
        <fullName>Email_Corrected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box after correcting a bounced email address</description>
        <inlineHelpText>Check this box after correcting a bounced email address</inlineHelpText>
        <label>Email Corrected</label>
        <type>Checkbox</type>
    </CustomField>