force-app/main/default/objects/Contact/fields/Email_Validity__c.field-meta.xml
<CustomField>
        <fullName>Email_Validity__c</fullName>
        <label>Email Validity</label>
        <length>5</length>
        <type>Text</type>
    </CustomField>