force-app/main/default/objects/Contact/fields/et4ae5__HasOptedOutOfMobile__c.field-meta.xml
<CustomField>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </CustomField>