force-app/main/default/objects/Contact/fields/Expire_Date__c.field-meta.xml
<CustomField>
        <fullName>Expire_Date__c</fullName>
        <label>Expire Date</label>
        <type>Date</type>
    </CustomField>