force-app/main/default/objects/Contact/fields/Grace_Days__c.field-meta.xml
<CustomField>
        <fullName>Grace_Days__c</fullName>
        <label>Grace Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>