force-app/main/default/objects/Contact/fields/Household_DSI_Id__c.field-meta.xml
<CustomField>
        <fullName>Household_DSI_Id__c</fullName>
        <formula>Account.DSI_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household DSI Id</label>
        <type>Text</type>
    </CustomField>