force-app/main/default/objects/Contact/fields/Income__c.field-meta.xml
<CustomField>
        <fullName>Income__c</fullName>
        <label>Income</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Income_Ranges_USD</valueSetName>
        </valueSet>
    </CustomField>