force-app/main/default/objects/Contact/fields/Kiosk_Location__c.field-meta.xml
<CustomField>
        <fullName>Kiosk_Location__c</fullName>
        <label>Kiosk Location</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>