force-app/main/default/objects/Contact/fields/Money_at_Expire__c.field-meta.xml
<CustomField>
        <fullName>Money_at_Expire__c</fullName>
        <label>Money at Expire</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>