force-app/main/default/objects/Contact/fields/Num_Times_Grace_Override__c.field-meta.xml
<CustomField>
        <fullName>Num_Times_Grace_Override__c</fullName>
        <label>#Times Grace Override</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>