force-app/main/default/objects/Contact/fields/Original_Start_Date__c.field-meta.xml
<CustomField>
        <fullName>Original_Start_Date__c</fullName>
        <label>Original Start Date</label>
        <type>Date</type>
    </CustomField>