force-app/main/default/objects/Contact/fields/Other_Email_1__c.field-meta.xml
<CustomField>
        <fullName>Other_Email_1__c</fullName>
        <label>Other Email 1</label>
        <type>Email</type>
    </CustomField>