force-app/main/default/objects/Contact/fields/Other_Email_2__c.field-meta.xml
<CustomField>
        <fullName>Other_Email_2__c</fullName>
        <label>Other Email 2</label>
        <type>Email</type>
    </CustomField>