force-app/main/default/objects/Contact/fields/Other_Email_3__c.field-meta.xml
<CustomField>
        <fullName>Other_Email_3__c</fullName>
        <label>Other Email 3</label>
        <type>Email</type>
    </CustomField>