force-app/main/default/objects/Contact/fields/Partner_Contact__c.field-meta.xml
<CustomField>
        <fullName>Partner_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Contact</label>
        <type>Checkbox</type>
    </CustomField>