force-app/main/default/objects/Contact/fields/PO_Num__c.field-meta.xml
<CustomField>
        <fullName>PO_Num__c</fullName>
        <label>PO#</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>