force-app/main/default/objects/Contact/fields/Promotion_Code__c.field-meta.xml
<CustomField>
        <fullName>Promotion_Code__c</fullName>
        <label>Promotion Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>