force-app/main/default/objects/Contact/fields/Pub__c.field-meta.xml
<CustomField>
        <fullName>Pub__c</fullName>
        <label>Pub</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>