force-app/main/default/objects/Contact/fields/Replica_Email__c.field-meta.xml
<CustomField>
    <fullName>Replica_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The customer can be opted in to Replica email notification. 

A CSR submits a request to opt an email address into replica email notification
The request is submitted to Listrak (G2D) 
The subscriber begins receiving daily replica email notifications.</description>
    <label>Replica Email</label>
    <type>Checkbox</type>
</CustomField>