force-app/main/default/objects/Contact/fields/Secondary_Email__c.field-meta.xml
<CustomField>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </CustomField>