force-app/main/default/objects/Contact/fields/Source__c.field-meta.xml
<CustomField>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Kiosk</fullName>
                </value>
                <value>
                    <fullName>CSR</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>