force-app/main/default/objects/Contact/fields/Tax_Rate__c.field-meta.xml
<CustomField>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>