force-app/main/default/objects/Contact/recordTypes/Business_Contact.recordType-meta.xml
<RecordType>
        <fullName>Business_Contact</fullName>
        <active>true</active>
        <description>This record type is used to display information about a subscriber contact</description>
        <label>Business Contact</label>
    </RecordType>