force-app/main/default/objects/Contact/recordTypes/Subscriber_Contact.recordType-meta.xml
<RecordType>
        <fullName>Subscriber_Contact</fullName>
        <active>true</active>
        <description>This record type is used to display information about a subscriber contact</description>
        <label>Subscriber Contact</label>
    </RecordType>