force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Auth0_User_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </ListView>